--- a/_config.yml
+++ b/_config.yml
@@ -94,9 +94,10 @@ analytics:
 # Site Author
 author:
   name             : "Jasper Dew"
-  avatar           : /assets/images/bio_photo/bonzi_cool.jpg
+  avatar           : !(/assets/images/bio_photo/bonzi_cool.jpg)
   bio              : "**nyoom**  *adjective*: the noise a race car makes, but cuter ʕ•ᴥ•ʔ"
-  location         : "On the drum stool"
+  location         : "In front of the drums, 
+sticks in hand"
   email            :
   links:
     - label: "Email"
