--- a/_config.yml
+++ b/_config.yml
@@ -94,10 +94,9 @@ analytics:
 # Site Author
 author:
   name             : "Jasper Dew"
-  avatar           : !(/assets/images/bio_photo/bonzi_cool.jpg)
+  avatar           : !(/assets/images/bonzi_cool.jpeg)
   bio              : "**nyoom**  *adjective*: the noise a race car makes, but cuter ʕ•ᴥ•ʔ"
-  location         : "In front of the drums, 
-sticks in hand"
+  location         : "In front of drum kit, sticks in hand"
   email            :
   links:
     - label: "Email"
