--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Jasper Dew"
-  avatar           : !(/assets/images/bonzi_cool.jpeg)
+  avatar           : /assets/images/bonzi_cool.jpeg
   bio              : "**nyoom**  *adjective*: the noise a race car makes, but cuter ʕ•ᴥ•ʔ"
   location         : "In front of drum kit, sticks in hand"
   email            :
