--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   avatar           : /assets/images/bonzi_cool.jpeg
   bio              : "**nyoom**  *adjective*: the noise a race car makes, but cuter ʕ•ᴥ•ʔ"
   location         : "In front of drum kit, sticks in hand"
-  email            :
+  email            : "jasper@clarkedew.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
