--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,13 +2,13 @@
 main:
   # title: "Quick-Start Guide"
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-    - title: "About"
-     url: https://kupteraz.github.io/home/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
-    - title: "Home"
-      url: https://kupteraz.github.io/home/
+  - title: "Home"
+    url: https://kupteraz.github.io/home/
+  - title: "About"
+    url: /about.md
