--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 locale                   : ""
 title                    : "Kup Teraz"
 title_separator          : "----"
-subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+subtitle                 : "*Let comic sans into your life.*"
+name                     : "Jasper Dew"
 description              : "An amazing website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
