--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ title_separator          : "----"
 subtitle                 : "Let comic sans into your life."
 name                     : "Jasper Dew"
 description              : "CLick. You won't regret it."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://kupteraz.github.io/home/
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+teaser                   : /assets/images/remysemi.jpg
+logo                     : /assets/images/beepbeeplettucefull.png
+masthead_title           : "Honk Honk!"
 breadcrumbs              : true
 words_per_minute         : 200
 comments:
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Jasper Dew"
-  avatar           : /assets/images/bonzi_cool.jpeg
+  avatar           : /assets/images/olafme.PNG
   bio              : "**nyoom**  *adjective*: the noise a race car makes, but cuter ʕ•ᴥ•ʔ"
   location         : "In front of drum kit, sticks in hand"
   #email            : #"jasper@clarkedew.com"
