--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ subtitle                 : "Let comic sans into your life."
 name                     : "Jasper Dew"
 description              : "CLick. You won't regret it."
 url                      : https://kupteraz.github.io/home/
-baseurl                  : /home/
+baseurl                  : 
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : /assets/images/remysemi.jpg
 logo                     : /assets/images/beepbeeplettucefull.png
