--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,3 +17,6 @@ main:
   - title: "Affiliates"
     url: https://emilsmith.net
     description: "Another kool guy I know...!"
+  - title: "'Incision'"
+    url: https://kupteraz.github.io/home/gamecontent/incision/
+    description: "Updates on my RPG Horror game, Incision"
