--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : /assets/images/remysemi.jpg
 logo                     : /assets/images/beepbeeplettucefull.png
 masthead_title           : 
-breadcrumbs              : true
+breadcrumbs              : false
 words_per_minute         : 200
 comments:
   provider               : "disqus"
