--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,5 @@ main:
     url: https://emilsmith.net
     description: "Another kool guy I know...!"
   - title: "'Incision'"
-    url: https://kupteraz.github.io/home/'incision'/
+    url: https://kupteraz.github.io/home/Incision/
     description: "Updates on my RPG Horror game, 'Incision'"
