--- a/_config.yml
+++ b/_config.yml
@@ -247,6 +247,11 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
@@ -280,3 +285,13 @@ defaults:
       comments: true
       share: true
       related: true
+
+defaults:
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
