--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   # title: "Quick-Start Guide"
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
+  - title: "Portfolio"
+    url: /portfolio/
   - title: "Cats"
     url: /indexcat/
   # - title: "Sitemap"
