--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-AU"
-title                    : "Kup Teraz"
+title                    : "Küp Teraz"
 title_separator          : "----"
 subtitle                 : "Let comic sans into your life."
 name                     : "Jasper Dew"
-description              : "CLick. You won't regret it."
+description              : "Extracts from the mind of a madman..."
 url                      : https://kupteraz.github.io
 baseurl                  : /home
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
