update AGAIN IM BACK

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 locale                   : "en-AU"
 title                    : "Küp Teraz"
 title_separator          : "----"
-subtitle                 : "Let comic sans into your life."
+subtitle                 : "Let comic sans into your life - now!"
 name                     : "Jasper Dew"
 description              : "Extracts from the mind of a madman..."
 url                      : https://kupteraz.github.io
