--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-AU"
 title                    : "Küp Teraz"
 title_separator          : "----"
 subtitle                 : "Let comic sans into your life - RIGHT now!"
-name                     : "Jasper Dew"
+name                     : "Juniper Dew"
 description              : "Extracts from the mind of a madman..."
 url                      : https://kupteraz.github.io
 baseurl                  : /home
